[FORUM][TOPIC] Fixed topic action buttons overlapping

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -348,8 +348,6 @@ input[type="button"] {
 }
 
 .message .post-actions {
-    position: absolute;
-    bottom: 10px;
 }
 
 .btn-post-action {
